--- a/views/index.html
+++ b/views/index.html
@@ -56,22 +56,12 @@
                 console.log(search);
                 dataTable.search(search).draw();
             }
-
-            //autocomplete on type
-            /* $('#search').on( "keypress", function(e) {
-                clearTimeout($.data(this, 'timer'));
-                if (e.keyCode == 13)
-                    //auto();
-                    console.log('Autocomplete here')
-                else
-                $(this).data('timer', setTimeout(auto, 500));
-            }); */
-
+            
             //return search values on search enter
             $('#submit').on( "click", function(e) {
                 e.preventDefault();
-                //crawl();
-                searchFunction();
+                crawl();
+                //searchFunction();
             });
 
             //auto complete route
