--- a/public/css/core.css
+++ b/public/css/core.css
@@ -37,7 +37,7 @@ a {
     width: 450px;
 }
 
-.form-wrapper #search {
+.form-wrapper #search, #crawl_word, #crawl_url, #crawl_limit {
     border: 1px solid #CCC;
     -webkit-box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
     -moz-box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
@@ -45,11 +45,11 @@ a {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-color: #999;
+    color: #999;
     float: left;
     font: 16px Lucida Sans, Trebuchet MS, Tahoma, sans-serif;
     padding: 10px;
-    width: 320px;
+    width: 100%;
 }
 
 .form-wrapper #search:focus {
@@ -119,6 +119,20 @@ th, td {
     padding: 15px;
     text-align: center;
     font-size: 18px; 
+}
+
+label {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }​
+
+textarea {
+    display: block;
+    margin-top: 20px;
+    width: 100%;
+    height: 75px;
+    resize: none;
 }
 
 .ui-autocomplete {
